Ajout forcé de token sur les requêtes sortantes 7